# libscep

./: CMakeLists.txt  README.md  Vagrantfile  libscep.spectemplate  provision-buster.sh  provision.sh
debian/: changelog
package/: make-deb.sh
src/: CMakeLists.txt  message.c  message_static_functions.c  scep.c  scep.h.in  util.c
src/clients/perl/Crypt-LibSCEP/: LibSCEP.xs  MYMETA.json  MYMETA.yml
src/clients/perl/Crypt-LibSCEP/lib/Crypt/: LibSCEP.pm
